            E.toString now tries harder to allocate a Flat String, and works with no-alloc for Uint8Array/FlatStrings
            WIO_LTE fix SD card initialisation
            Improve SD card reliability on all boards by trying to initialise multiple times before failing
            Remove forced inlining in variable inspection functions (reduces flash usage by ~10k)
  
     1v95 : nRF5x: Swap to UART fifo to avoid overrun errors at high baud rates
            Ensure Exceptions/errors are reported on a blank line
            Internal: Added initialiser argument to jsvNewStringOfLength
            Internal: Added jsvObjectSetChildVar/jsvObjectSetChildVar/jsvObjectSetChildVar
            Internal: Fix jsvCopy if given a NAME_INT/etc
            Added ES6's Object.assign
            nRF5x: NRF.setScan now reads service data automatically
            nRF5x: NRF.findDevices aggregates data from multiple advertising packets
            nRF5x: Remove app_uart and use nrf_drv_uart with double buffering - fix uart overflow errors (fix #1238)
            nRF5x: Fix issue with findDevices/setScan servicedata when all digits of service are numbers (eg "1809")
            Fix memory leak in tab completion code
            Add `E.errorFlag` event to allow JS to respond to internal errors
            Use Esc[J VT100 code when cycling through command history (much faster REPL on low bandwidth connections)
            ESP8266: Remove debugger again as it will never work on 8266
            ESP8266: Enable unaligned reads for ESP8266_4MB (fix #1240,#837)
            ESP8266: move code save section to fist partition for memory mapping for ESP8266_4MB (fix #1240)
            ESP8266: Add GPIO16 as D16 without watch (#1206) but soft PWM/I2C/SPI/etc 
            ESP8266: Remove osprintf for RELEASE=1 
            Internal: Networkjs now forwards `socketType` - laying groundwork for UDP over AT command (#1232)
            Added simple RegExp implemention (partial fix #256)